--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,10 +44,6 @@
     "        # if data given as homsets then make the source and target dictionaries\n",
     "        if self.homsets != {}:\n",
     "            self.sourceAndTargetMake()\n",
-    "\n",
-    "        # if no identities are given add identities\n",
-    "        if identityMap == {}:\n",
-    "            self.addIdentities()\n",
     "\n",
     "        # make object and morphism lists\n",
     "        self.objects = set(src.values()).union(set(target.values()))\n",
@@ -133,12 +129,6 @@
     "                                print((third, second, first))\n",
     "                            return False\n",
     "        return True\n",
-    "    \n",
-    "    # add identity morphisms to set of morphisms\n",
-    "    def addIdentities(self) -> None:\n",
-    "        for thisObject in self.objects:\n",
-    "            thisMorphism = \"id_\" + str(thisObject)\n",
-    "            self.identityMap[thisObject] = thisMorphism\n",
     "\n",
     "    # from src and target data, make homset dictionary\n",
     "    def homsetMake(self) -> None:\n",
@@ -527,40 +517,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define two identical categories and their product\n",
-    "'''\n",
-    "src = {\"f\":0, \"g\":1, \"h\":2, \"i\":0, \"m\":0, \"k\":1}\n",
-    "target = {\"f\":1, \"g\":2, \"h\":3, \"i\":2, \"m\":3, \"k\":3}\n",
-    "comp = {(\"g\",\"f\"): \"i\", (\"h\", \"g\"):\"k\", (\"h\",\"i\"): \"m\", (\"k\",\"f\"): \"m\"}\n",
-    "'''\n",
+    "homsets = {('0_0','0_0'): ['1_(0->0)_id'],\n",
+    "           ('0_1','0_1'): ['1_(1->1)_id'],\n",
+    "           ('0_2','0_2'): ['1_(2->2)_id'],\n",
+    "           ('0_3','0_3'): ['1_(3->3)_id'],\n",
+    "           ('0_0','0_1'): ['1_(0->1)_0'],\n",
+    "           ('0_1','0_2'): ['1_(1->2)_0'],\n",
+    "           ('0_2','0_3'): ['1_(2->3)_0'],\n",
+    "           ('0_0','0_2'): ['1_(0->2)_0'],\n",
+    "           ('0_0','0_3'): ['1_(0->3)_0'],\n",
+    "           ('0_1','0_3'): ['1_(1->3)_0']}\n",
     "\n",
-    "homsets = {('0_0','0_0'): ['1_0->0_0'],\n",
-    "           ('0_1','0_1'): ['1_1->1_0'],\n",
-    "           ('0_2','0_2'): ['1_2->2_0'],\n",
-    "           ('0_3','0_3'): ['1_3->3_0'],\n",
-    "           ('0_0','0_1'): ['1_0->1_0'],\n",
-    "           ('0_1','0_2'): ['1_1->2_0'],\n",
-    "           ('0_2','0_3'): ['1_2->3_0'],\n",
-    "           ('0_0','0_2'): ['1_0->2_0'],\n",
-    "           ('0_0','0_3'): ['1_0->3_0'],\n",
-    "           ('0_1','0_3'): ['1_1->3_0']}\n",
+    "comp = {('1_(1->2)_0','1_(0->1)_0'): '1_(0->2)_0',\n",
+    "        ('1_(2->3)_0','1_(1->2)_0'): '1_(1->3)_0',\n",
+    "        ('1_(2->3)_0','1_(0->2)_0'): '1_(0->3)_0',\n",
+    "        ('1_(1->3)_0','1_(0->1)_0'): '1_(0->3)_0'}\n",
     "\n",
-    "comp = {('1_1->2_0','1_0->1_0'): '1_0->2_0',\n",
-    "        ('1_2->3_0','1_1->2_0'): '1_1->3_0',\n",
-    "        ('1_2->3_0','1_0->2_0'): '1_0->3_0',\n",
-    "        ('1_1->3_0','1_0->1_0'): '1_0->3_0'}\n",
+    "identityMap = {'0_0': '1_(0->0)_id',\n",
+    "               '0_1': '1_(1->1)_id',\n",
+    "               '0_2': '1_(2->2)_id',\n",
+    "               '0_3': '1_(3->3)_id'}\n",
     "\n",
-    "identityMap = {'0_0': '1_0->0_0',\n",
-    "               '0_1': '1_1->1_0',\n",
-    "               '0_2': '1_2->2_0',\n",
-    "               '0_3': '1_3->3_0'}\n",
-    "\n",
-    "c1 = Category(homsets, {}, {}, comp, identityMap, '4')\n",
-    "c2 = Category(homsets, {}, {}, comp, identityMap, '4')\n",
+    "c1 = Category(homsets, {}, {}, comp, identityMap, '4_cat')\n",
+    "c2 = Category(homsets, {}, {}, comp, identityMap, '4_cat')\n",
     "\n",
     "productC1C2 = productCategory(c1, c2)\n",
     "\n",
@@ -569,26 +553,21 @@
     "morphismMap = {i:i for i in c1.morphisms}\n",
     "F = Functor(c1, c2, objectMap, morphismMap)\n",
     "\n",
-    "src = {\"1_00_1\": 0, \"1_01_1\":0, \"1_01_2\":0, \"1_11_1\":1, \"id0\":0, \"id1\":1}\n",
-    "target = {\"1_00_1\": 0, \"1_01_1\":1, \"1_01_2\":1, \"1_11_1\":1, \"id0\":0, \"id1\":1}\n",
-    "comp = {(\"1_01_1\",\"1_00_1\"): \"1_01_1\", \n",
-    "        (\"1_11_1\",\"1_01_1\"): \"1_01_1\",\n",
-    "        (\"1_01_2\", \"1_00_1\"): \"1_01_2\",\n",
-    "        (\"1_11_1\", \"1_01_2\"): \"1_01_2\",\n",
-    "        (\"id0\", \"1_00_1\"): \"1_00_1\",\n",
-    "        (\"1_00_1\", \"id0\"): \"1_00_1\",\n",
-    "        (\"1_01_1\", \"id0\"): \"1_01_1\",\n",
-    "        (\"1_01_2\", \"id0\"): \"1_01_2\",\n",
-    "        (\"id1\", \"1_01_1\"): \"1_01_1\",\n",
-    "        (\"id1\", \"1_01_2\"): \"1_01_2\",\n",
-    "        (\"id1\", \"1_11_1\"): \"1_11_1\",\n",
-    "        (\"1_11_1\", \"id1\"): \"1_11_1\",\n",
-    "        (\"1_00_1\", \"1_00_1\"): \"id0\",\n",
-    "        (\"1_11_1\", \"1_11_1\"): \"id1\",\n",
-    "        (\"id0\", \"id0\"): \"id0\",\n",
-    "        (\"id1\", \"id1\"): \"id1\"}\n",
     "\n",
-    "c3 = Category({}, src, target, comp, {0:\"id0\", 1:\"id1\"}, '2_2',debug=True)"
+    "# define another category\n",
+    "homsets = {('0_0','0_0'): ['1_(0->0)_id', '1_(0->0)_0'],\n",
+    "           ('0_1','0_1'): ['1_(1->1)_id', '1_(1->1)_0'],\n",
+    "           ('0_0','0_1'): ['1_(0->1)_0', '1_(0->1)_1']}\n",
+    "\n",
+    "comp = {('1_(0->0)_0', '1_(0->0)_0'): '1_(0->0)_id',\n",
+    "        ('1_(1->1)_0', '1_(1->1)_0'): '1_(1->1)_id',\n",
+    "        ('1_(0->1)_0', '1_(0->0)_0'): '1_(0->1)_0',\n",
+    "        ('1_(0->1)_1', '1_(0->0)_0'): '1_(0->1)_1',\n",
+    "        ('1_(1->1)_0', '1_(0->1)_0'): '1_(0->1)_0',\n",
+    "        ('1_(1->1)_0', '1_(0->1)_1'): '1_(0->1)_1'}\n",
+    "identityMap = {'0_0': '1_(0->0)_id', '0_1': '1_(1->1)_id'}\n",
+    "\n",
+    "c3 = Category(homsets, {}, {}, comp, identityMap, '2_2')"
    ]
   },
   {
@@ -1087,15 +1066,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def modifyObject(object, src, target):\n",
-    "    return '1_' + src + '->' + target + '_' + object[2:]\n",
+    "    return '1_(' + src + '->' + target + ')_' + object[2:]\n",
     "\n",
     "def modifyMorphism(morphism, src, target):\n",
-    "    return '2_' + src + '->' + target + '_' + morphism[2:].replace('->','=>')\n",
+    "    return '2_(' + src + '->' + target + ')_' + morphism[2:].replace('->','=>')\n",
     "\n",
     "def modifyHomsets(homsets, objectMap, morphismMap):\n",
     "    return {(objectMap[src], objectMap[target]):[morphismMap[thisMorphism] for thisMorphism in morphismList] \n",
@@ -1125,44 +1104,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Category: \n",
-       "Homsets: {('0_0', '0_0'): ['1_0->0_0'], ('0_1', '0_1'): ['1_1->1_0'], ('0_2', '0_2'): ['1_2->2_0'], ('0_3', '0_3'): ['1_3->3_0'], ('0_0', '0_1'): ['1_0->1_0'], ('0_1', '0_2'): ['1_1->2_0'], ('0_2', '0_3'): ['1_2->3_0'], ('0_0', '0_2'): ['1_0->2_0'], ('0_0', '0_3'): ['1_0->3_0'], ('0_1', '0_3'): ['1_1->3_0'], ('0_3', '0_0'): [], ('0_3', '0_1'): [], ('0_3', '0_2'): [], ('0_1', '0_0'): [], ('0_2', '0_0'): [], ('0_2', '0_1'): []}\n",
-       "Identity map: {'0_0': '1_0->0_0', '0_1': '1_1->1_0', '0_2': '1_2->2_0', '0_3': '1_3->3_0'}\n",
-       "Composition: {('1_1->2_0', '1_0->1_0'): '1_0->2_0', ('1_2->3_0', '1_1->2_0'): '1_1->3_0', ('1_2->3_0', '1_0->2_0'): '1_0->3_0', ('1_1->3_0', '1_0->1_0'): '1_0->3_0', ('1_3->3_0', '1_3->3_0'): '1_3->3_0', ('1_3->3_0', '1_2->3_0'): '1_2->3_0', ('1_3->3_0', '1_0->3_0'): '1_0->3_0', ('1_3->3_0', '1_1->3_0'): '1_1->3_0', ('1_0->0_0', '1_0->0_0'): '1_0->0_0', ('1_0->1_0', '1_0->0_0'): '1_0->1_0', ('1_0->2_0', '1_0->0_0'): '1_0->2_0', ('1_0->3_0', '1_0->0_0'): '1_0->3_0', ('1_1->1_0', '1_1->1_0'): '1_1->1_0', ('1_1->1_0', '1_0->1_0'): '1_0->1_0', ('1_1->2_0', '1_1->1_0'): '1_1->2_0', ('1_1->3_0', '1_1->1_0'): '1_1->3_0', ('1_2->2_0', '1_2->2_0'): '1_2->2_0', ('1_2->2_0', '1_1->2_0'): '1_1->2_0', ('1_2->3_0', '1_2->2_0'): '1_2->3_0', ('1_2->2_0', '1_0->2_0'): '1_0->2_0'}\n",
-       "Name: 4"
+       "Homsets: {('0_0', '0_0'): ['1_(0->0)_id', '1_(0->0)_1'], ('0_1', '0_1'): ['1_(1->1)_id', '1_(1->1)_1'], ('0_0', '0_1'): ['1_(0->1)_1', '1_(0->1)_2'], ('0_1', '0_0'): []}\n",
+       "Identity map: {'0_0': '1_(0->0)_id', '0_1': '1_(1->1)_id'}\n",
+       "Composition: {('1_(0->0)_1', '1_(0->0)_1'): '1_(0->0)_id', ('1_(1->1)_1', '1_(1->1)_1'): '1_(1->1)_id', ('1_(0->1)_1', '1_(0->0)_1'): '1_(0->1)_1', ('1_(0->1)_2', '1_(0->0)_1'): '1_(0->1)_2', ('1_(1->1)_1', '1_(0->1)_1'): '1_(0->1)_1', ('1_(1->1)_1', '1_(0->1)_2'): '1_(0->1)_2', ('1_(1->1)_id', '1_(1->1)_id'): '1_(1->1)_id', ('1_(1->1)_1', '1_(1->1)_id'): '1_(1->1)_1', ('1_(1->1)_id', '1_(1->1)_1'): '1_(1->1)_1', ('1_(1->1)_id', '1_(0->1)_1'): '1_(0->1)_1', ('1_(1->1)_id', '1_(0->1)_2'): '1_(0->1)_2', ('1_(0->0)_id', '1_(0->0)_id'): '1_(0->0)_id', ('1_(0->0)_1', '1_(0->0)_id'): '1_(0->0)_1', ('1_(0->0)_id', '1_(0->0)_1'): '1_(0->0)_1', ('1_(0->1)_1', '1_(0->0)_id'): '1_(0->1)_1', ('1_(0->1)_2', '1_(0->0)_id'): '1_(0->1)_2'}\n",
+       "Name: 2_2"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c1"
+    "c3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Category: \n",
-       "Homsets: {('1_2->5_0', '1_2->5_0'): ['2_2->5_0=>0_0'], ('1_2->5_1', '1_2->5_1'): ['2_2->5_1=>1_0'], ('1_2->5_2', '1_2->5_2'): ['2_2->5_2=>2_0'], ('1_2->5_3', '1_2->5_3'): ['2_2->5_3=>3_0'], ('1_2->5_0', '1_2->5_1'): ['2_2->5_0=>1_0'], ('1_2->5_1', '1_2->5_2'): ['2_2->5_1=>2_0'], ('1_2->5_2', '1_2->5_3'): ['2_2->5_2=>3_0'], ('1_2->5_0', '1_2->5_2'): ['2_2->5_0=>2_0'], ('1_2->5_0', '1_2->5_3'): ['2_2->5_0=>3_0'], ('1_2->5_1', '1_2->5_3'): ['2_2->5_1=>3_0'], ('1_2->5_3', '1_2->5_0'): [], ('1_2->5_3', '1_2->5_1'): [], ('1_2->5_3', '1_2->5_2'): [], ('1_2->5_1', '1_2->5_0'): [], ('1_2->5_2', '1_2->5_0'): [], ('1_2->5_2', '1_2->5_1'): []}\n",
-       "Identity map: {'1_2->5_0': '2_2->5_0=>0_0', '1_2->5_1': '2_2->5_1=>1_0', '1_2->5_2': '2_2->5_2=>2_0', '1_2->5_3': '2_2->5_3=>3_0'}\n",
-       "Composition: {('2_2->5_1=>2_0', '2_2->5_0=>1_0'): '2_2->5_0=>2_0', ('2_2->5_2=>3_0', '2_2->5_1=>2_0'): '2_2->5_1=>3_0', ('2_2->5_2=>3_0', '2_2->5_0=>2_0'): '2_2->5_0=>3_0', ('2_2->5_1=>3_0', '2_2->5_0=>1_0'): '2_2->5_0=>3_0', ('2_2->5_3=>3_0', '2_2->5_3=>3_0'): '2_2->5_3=>3_0', ('2_2->5_3=>3_0', '2_2->5_2=>3_0'): '2_2->5_2=>3_0', ('2_2->5_3=>3_0', '2_2->5_0=>3_0'): '2_2->5_0=>3_0', ('2_2->5_3=>3_0', '2_2->5_1=>3_0'): '2_2->5_1=>3_0', ('2_2->5_0=>0_0', '2_2->5_0=>0_0'): '2_2->5_0=>0_0', ('2_2->5_0=>1_0', '2_2->5_0=>0_0'): '2_2->5_0=>1_0', ('2_2->5_0=>2_0', '2_2->5_0=>0_0'): '2_2->5_0=>2_0', ('2_2->5_0=>3_0', '2_2->5_0=>0_0'): '2_2->5_0=>3_0', ('2_2->5_1=>1_0', '2_2->5_1=>1_0'): '2_2->5_1=>1_0', ('2_2->5_1=>1_0', '2_2->5_0=>1_0'): '2_2->5_0=>1_0', ('2_2->5_1=>2_0', '2_2->5_1=>1_0'): '2_2->5_1=>2_0', ('2_2->5_1=>3_0', '2_2->5_1=>1_0'): '2_2->5_1=>3_0', ('2_2->5_2=>2_0', '2_2->5_2=>2_0'): '2_2->5_2=>2_0', ('2_2->5_2=>2_0', '2_2->5_1=>2_0'): '2_2->5_1=>2_0', ('2_2->5_2=>3_0', '2_2->5_2=>2_0'): '2_2->5_2=>3_0', ('2_2->5_2=>2_0', '2_2->5_0=>2_0'): '2_2->5_0=>2_0'}\n",
+       "Homsets: {('1_(2->5)_0', '1_(2->5)_0'): ['2_(2->5)_(0=>0)_0'], ('1_(2->5)_1', '1_(2->5)_1'): ['2_(2->5)_(1=>1)_0'], ('1_(2->5)_2', '1_(2->5)_2'): ['2_(2->5)_(2=>2)_0'], ('1_(2->5)_3', '1_(2->5)_3'): ['2_(2->5)_(3=>3)_0'], ('1_(2->5)_0', '1_(2->5)_1'): ['2_(2->5)_(0=>1)_0'], ('1_(2->5)_1', '1_(2->5)_2'): ['2_(2->5)_(1=>2)_0'], ('1_(2->5)_2', '1_(2->5)_3'): ['2_(2->5)_(2=>3)_0'], ('1_(2->5)_0', '1_(2->5)_2'): ['2_(2->5)_(0=>2)_0'], ('1_(2->5)_0', '1_(2->5)_3'): ['2_(2->5)_(0=>3)_0'], ('1_(2->5)_1', '1_(2->5)_3'): ['2_(2->5)_(1=>3)_0'], ('1_(2->5)_3', '1_(2->5)_0'): [], ('1_(2->5)_3', '1_(2->5)_1'): [], ('1_(2->5)_3', '1_(2->5)_2'): [], ('1_(2->5)_1', '1_(2->5)_0'): [], ('1_(2->5)_2', '1_(2->5)_0'): [], ('1_(2->5)_2', '1_(2->5)_1'): []}\n",
+       "Identity map: {'1_(2->5)_0': '2_(2->5)_(0=>0)_0', '1_(2->5)_1': '2_(2->5)_(1=>1)_0', '1_(2->5)_2': '2_(2->5)_(2=>2)_0', '1_(2->5)_3': '2_(2->5)_(3=>3)_0'}\n",
+       "Composition: {('2_(2->5)_(1=>2)_0', '2_(2->5)_(0=>1)_0'): '2_(2->5)_(0=>2)_0', ('2_(2->5)_(2=>3)_0', '2_(2->5)_(1=>2)_0'): '2_(2->5)_(1=>3)_0', ('2_(2->5)_(2=>3)_0', '2_(2->5)_(0=>2)_0'): '2_(2->5)_(0=>3)_0', ('2_(2->5)_(1=>3)_0', '2_(2->5)_(0=>1)_0'): '2_(2->5)_(0=>3)_0', ('2_(2->5)_(3=>3)_0', '2_(2->5)_(3=>3)_0'): '2_(2->5)_(3=>3)_0', ('2_(2->5)_(3=>3)_0', '2_(2->5)_(2=>3)_0'): '2_(2->5)_(2=>3)_0', ('2_(2->5)_(3=>3)_0', '2_(2->5)_(0=>3)_0'): '2_(2->5)_(0=>3)_0', ('2_(2->5)_(3=>3)_0', '2_(2->5)_(1=>3)_0'): '2_(2->5)_(1=>3)_0', ('2_(2->5)_(0=>0)_0', '2_(2->5)_(0=>0)_0'): '2_(2->5)_(0=>0)_0', ('2_(2->5)_(0=>1)_0', '2_(2->5)_(0=>0)_0'): '2_(2->5)_(0=>1)_0', ('2_(2->5)_(0=>2)_0', '2_(2->5)_(0=>0)_0'): '2_(2->5)_(0=>2)_0', ('2_(2->5)_(0=>3)_0', '2_(2->5)_(0=>0)_0'): '2_(2->5)_(0=>3)_0', ('2_(2->5)_(1=>1)_0', '2_(2->5)_(1=>1)_0'): '2_(2->5)_(1=>1)_0', ('2_(2->5)_(1=>1)_0', '2_(2->5)_(0=>1)_0'): '2_(2->5)_(0=>1)_0', ('2_(2->5)_(1=>2)_0', '2_(2->5)_(1=>1)_0'): '2_(2->5)_(1=>2)_0', ('2_(2->5)_(1=>3)_0', '2_(2->5)_(1=>1)_0'): '2_(2->5)_(1=>3)_0', ('2_(2->5)_(2=>2)_0', '2_(2->5)_(2=>2)_0'): '2_(2->5)_(2=>2)_0', ('2_(2->5)_(2=>2)_0', '2_(2->5)_(1=>2)_0'): '2_(2->5)_(1=>2)_0', ('2_(2->5)_(2=>3)_0', '2_(2->5)_(2=>2)_0'): '2_(2->5)_(2=>3)_0', ('2_(2->5)_(2=>2)_0', '2_(2->5)_(0=>2)_0'): '2_(2->5)_(0=>2)_0'}\n",
        "Name: 4_r"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
