--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,14 @@
     "        ('1_(1->1)_0', '1_(0->1)_1'): '1_(0->1)_1'}\n",
     "identityMap = {'0_0': '1_(0->0)_id', '0_1': '1_(1->1)_id'}\n",
     "\n",
-    "c3 = Category(homsets, {}, {}, comp, identityMap, '2_2')"
+    "c3 = Category(homsets, {}, {}, comp, identityMap, '2_2')\n",
+    "\n",
+    "\n",
+    "# Define the group z2 as a category\n",
+    "homsets = {('0_0', '0_0'): ['1_(0->0)_id', '1_(0->0)_0']}\n",
+    "comp = {('1_(0->0)_0', '1_(0->0)_0'): '1_(0->0)_id'}\n",
+    "identityMap = {'0_0': '1_(0->0)_id'}\n",
+    "z2 = Category(homsets, {}, {}, comp, identityMap, 'z2')"
    ]
   },
   {
@@ -652,12 +659,6 @@
    ],
    "source": [
     "# define the hom categories as the group Z2\n",
-    "\n",
-    "# Notation: 2_00_1 is the 2-cell with source 0 and target 0 and index 1 (actually source/target is 1_0 but we drop the 1-cell notation)\n",
-    "src = {\"2_00_1\": \"1_0\", \"2_00_0\": \"1_0\"}\n",
-    "target = {\"2_00_1\": \"1_0\", \"2_00_0\": \"1_0\"}\n",
-    "comp = {(\"2_00_0\", \"2_00_0\"):\"2_00_0\", (\"2_00_0\", \"2_00_1\"): \"2_00_1\", (\"2_00_1\", \"2_00_0\"): \"2_00_1\", (\"2_00_1\", \"2_00_1\"): \"2_00_0\"}\n",
-    "z2 = Category({}, src, target, comp, {\"1_0\": \"2_00_0\"}, 'z2')\n",
     "\n",
     "# Notation: 0_1 is the 0-cell with index 1\n",
     "zeroCells = [\"0_0\",\"0_1\"]\n",
