--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,8 +658,6 @@
     }
    ],
    "source": [
-    "# define the hom categories as the group Z2\n",
-    "\n",
     "# Notation: 0_1 is the 0-cell with index 1\n",
     "zeroCells = [\"0_0\",\"0_1\"]\n",
     "hom = {(\"0_0\",\"0_0\"):z2, (\"0_1\",\"0_1\"):z2, (\"0_0\", \"0_1\"):z2}\n",
@@ -1067,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1095,7 @@
     "    homsets = modifyHomsets(cat.homsets, objectMap, morphismMap)\n",
     "    comp = modifyComp(cat.comp, objectMap, morphismMap)\n",
     "    identityMap = modifyIdentityMap(cat.identityMap, objectMap, morphismMap)\n",
-    "    name = cat.name + '_r'\n",
+    "    name = cat.name + '_(' + src + ',' + target + ')'\n",
     "\n",
     "    relabeledCategory = Category(homsets, {}, {}, comp, identityMap, name)\n",
     "    return relabeledCategory"
@@ -1105,50 +1103,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Category: \n",
-       "Homsets: {('0_0', '0_0'): ['1_(0->0)_id', '1_(0->0)_1'], ('0_1', '0_1'): ['1_(1->1)_id', '1_(1->1)_1'], ('0_0', '0_1'): ['1_(0->1)_1', '1_(0->1)_2'], ('0_1', '0_0'): []}\n",
-       "Identity map: {'0_0': '1_(0->0)_id', '0_1': '1_(1->1)_id'}\n",
-       "Composition: {('1_(0->0)_1', '1_(0->0)_1'): '1_(0->0)_id', ('1_(1->1)_1', '1_(1->1)_1'): '1_(1->1)_id', ('1_(0->1)_1', '1_(0->0)_1'): '1_(0->1)_1', ('1_(0->1)_2', '1_(0->0)_1'): '1_(0->1)_2', ('1_(1->1)_1', '1_(0->1)_1'): '1_(0->1)_1', ('1_(1->1)_1', '1_(0->1)_2'): '1_(0->1)_2', ('1_(1->1)_id', '1_(1->1)_id'): '1_(1->1)_id', ('1_(1->1)_1', '1_(1->1)_id'): '1_(1->1)_1', ('1_(1->1)_id', '1_(1->1)_1'): '1_(1->1)_1', ('1_(1->1)_id', '1_(0->1)_1'): '1_(0->1)_1', ('1_(1->1)_id', '1_(0->1)_2'): '1_(0->1)_2', ('1_(0->0)_id', '1_(0->0)_id'): '1_(0->0)_id', ('1_(0->0)_1', '1_(0->0)_id'): '1_(0->0)_1', ('1_(0->0)_id', '1_(0->0)_1'): '1_(0->0)_1', ('1_(0->1)_1', '1_(0->0)_id'): '1_(0->1)_1', ('1_(0->1)_2', '1_(0->0)_id'): '1_(0->1)_2'}\n",
-       "Name: 2_2"
+       "Homsets: {('0_0', '0_0'): ['1_(0->0)_id', '1_(0->0)_0']}\n",
+       "Identity map: {'0_0': '1_(0->0)_id'}\n",
+       "Composition: {('1_(0->0)_0', '1_(0->0)_0'): '1_(0->0)_id', ('1_(0->0)_id', '1_(0->0)_id'): '1_(0->0)_id', ('1_(0->0)_0', '1_(0->0)_id'): '1_(0->0)_0', ('1_(0->0)_id', '1_(0->0)_0'): '1_(0->0)_0'}\n",
+       "Name: z2"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c3"
+    "z2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Category: \n",
-       "Homsets: {('1_(2->5)_0', '1_(2->5)_0'): ['2_(2->5)_(0=>0)_0'], ('1_(2->5)_1', '1_(2->5)_1'): ['2_(2->5)_(1=>1)_0'], ('1_(2->5)_2', '1_(2->5)_2'): ['2_(2->5)_(2=>2)_0'], ('1_(2->5)_3', '1_(2->5)_3'): ['2_(2->5)_(3=>3)_0'], ('1_(2->5)_0', '1_(2->5)_1'): ['2_(2->5)_(0=>1)_0'], ('1_(2->5)_1', '1_(2->5)_2'): ['2_(2->5)_(1=>2)_0'], ('1_(2->5)_2', '1_(2->5)_3'): ['2_(2->5)_(2=>3)_0'], ('1_(2->5)_0', '1_(2->5)_2'): ['2_(2->5)_(0=>2)_0'], ('1_(2->5)_0', '1_(2->5)_3'): ['2_(2->5)_(0=>3)_0'], ('1_(2->5)_1', '1_(2->5)_3'): ['2_(2->5)_(1=>3)_0'], ('1_(2->5)_3', '1_(2->5)_0'): [], ('1_(2->5)_3', '1_(2->5)_1'): [], ('1_(2->5)_3', '1_(2->5)_2'): [], ('1_(2->5)_1', '1_(2->5)_0'): [], ('1_(2->5)_2', '1_(2->5)_0'): [], ('1_(2->5)_2', '1_(2->5)_1'): []}\n",
-       "Identity map: {'1_(2->5)_0': '2_(2->5)_(0=>0)_0', '1_(2->5)_1': '2_(2->5)_(1=>1)_0', '1_(2->5)_2': '2_(2->5)_(2=>2)_0', '1_(2->5)_3': '2_(2->5)_(3=>3)_0'}\n",
-       "Composition: {('2_(2->5)_(1=>2)_0', '2_(2->5)_(0=>1)_0'): '2_(2->5)_(0=>2)_0', ('2_(2->5)_(2=>3)_0', '2_(2->5)_(1=>2)_0'): '2_(2->5)_(1=>3)_0', ('2_(2->5)_(2=>3)_0', '2_(2->5)_(0=>2)_0'): '2_(2->5)_(0=>3)_0', ('2_(2->5)_(1=>3)_0', '2_(2->5)_(0=>1)_0'): '2_(2->5)_(0=>3)_0', ('2_(2->5)_(3=>3)_0', '2_(2->5)_(3=>3)_0'): '2_(2->5)_(3=>3)_0', ('2_(2->5)_(3=>3)_0', '2_(2->5)_(2=>3)_0'): '2_(2->5)_(2=>3)_0', ('2_(2->5)_(3=>3)_0', '2_(2->5)_(0=>3)_0'): '2_(2->5)_(0=>3)_0', ('2_(2->5)_(3=>3)_0', '2_(2->5)_(1=>3)_0'): '2_(2->5)_(1=>3)_0', ('2_(2->5)_(0=>0)_0', '2_(2->5)_(0=>0)_0'): '2_(2->5)_(0=>0)_0', ('2_(2->5)_(0=>1)_0', '2_(2->5)_(0=>0)_0'): '2_(2->5)_(0=>1)_0', ('2_(2->5)_(0=>2)_0', '2_(2->5)_(0=>0)_0'): '2_(2->5)_(0=>2)_0', ('2_(2->5)_(0=>3)_0', '2_(2->5)_(0=>0)_0'): '2_(2->5)_(0=>3)_0', ('2_(2->5)_(1=>1)_0', '2_(2->5)_(1=>1)_0'): '2_(2->5)_(1=>1)_0', ('2_(2->5)_(1=>1)_0', '2_(2->5)_(0=>1)_0'): '2_(2->5)_(0=>1)_0', ('2_(2->5)_(1=>2)_0', '2_(2->5)_(1=>1)_0'): '2_(2->5)_(1=>2)_0', ('2_(2->5)_(1=>3)_0', '2_(2->5)_(1=>1)_0'): '2_(2->5)_(1=>3)_0', ('2_(2->5)_(2=>2)_0', '2_(2->5)_(2=>2)_0'): '2_(2->5)_(2=>2)_0', ('2_(2->5)_(2=>2)_0', '2_(2->5)_(1=>2)_0'): '2_(2->5)_(1=>2)_0', ('2_(2->5)_(2=>3)_0', '2_(2->5)_(2=>2)_0'): '2_(2->5)_(2=>3)_0', ('2_(2->5)_(2=>2)_0', '2_(2->5)_(0=>2)_0'): '2_(2->5)_(0=>2)_0'}\n",
-       "Name: 4_r"
+       "Homsets: {('1_(2->5)_0', '1_(2->5)_0'): ['2_(2->5)_(0=>0)_id', '2_(2->5)_(0=>0)_0']}\n",
+       "Identity map: {'1_(2->5)_0': '2_(2->5)_(0=>0)_id'}\n",
+       "Composition: {('2_(2->5)_(0=>0)_0', '2_(2->5)_(0=>0)_0'): '2_(2->5)_(0=>0)_id', ('2_(2->5)_(0=>0)_id', '2_(2->5)_(0=>0)_id'): '2_(2->5)_(0=>0)_id', ('2_(2->5)_(0=>0)_0', '2_(2->5)_(0=>0)_id'): '2_(2->5)_(0=>0)_0', ('2_(2->5)_(0=>0)_id', '2_(2->5)_(0=>0)_0'): '2_(2->5)_(0=>0)_0'}\n",
+       "Name: z2_(2,5)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "relabelCategory(c1, '2','5')"
+    "relabelCategory(z2, '2','5')"
    ]
   },
   {
