--- a/androguardTest/androguardTest.ipynb
+++ b/androguardTest/androguardTest.ipynb
@@ -1106,7 +1106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.6.15"
   },
   "orig_nbformat": 4
  },
