--- a/planetCrafter/planetCrafter.ipynb
+++ b/planetCrafter/planetCrafter.ipynb
@@ -10,12 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "0a4d8a46",
+   "execution_count": null,
+   "id": "6dfaccfc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "itemString = \"206115675,208369183,204068492,201852964,205052060,201046537,209393971,208176728,201513845,209856954,204539883,204112941,203290946,208272680,206097409,204352770,207105620,208168026,201097724,203094556,209713547,202237032\"\n",
+    "\n",
+    "itemIDList = itemString.split(\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d72719e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts_dict = {'Silk': len(itemIDList)}"
    ]
   },
   {
@@ -44,19 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "0181cdf4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "itemString = \"206115675,208369183,204068492,201852964,205052060,201046537,209393971,208176728,201513845,209856954,204539883,204112941,203290946,208272680,206097409,204352770,207105620,208168026,201097724,203094556,209713547,202237032\"\n",
-    "\n",
-    "itemIDList = itemString.split(\",\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "829e53f1",
    "metadata": {},
    "outputs": [
@@ -69,9 +69,6 @@
     }
    ],
    "source": [
-    "counts_dict = {'Silk': len(itemIDList)}\n",
-    "\n",
-    "\n",
     "newItemList = []\n",
     "for item, count in counts_dict.items():\n",
     "    for _ in range(count):\n",
@@ -90,6 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
     "startList = []\n",
     "\n",
     "for i, thisID in enumerate(itemIDList):\n",
